# practice-chords

./: .gitignore  README.md  pyproject.toml
chord_trainer/: __init__.py  __main__.py  app.py  audio.py  bigtext.py  chords.py  data.py
web/: index.html
